--- a/src/components/comercial Properties/animations.css
+++ b/src/components/comercial Properties/animations.css
@@ -83,6 +83,7 @@
       transform: scale(1,1);
     }
     to {
+      box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px;
       transform: scale(1.05,1.05);
     }
 }
