--- a/src/components/mob/blog/bloganimation.css
+++ b/src/components/mob/blog/bloganimation.css
@@ -14,6 +14,22 @@
       transform: translateY(0rem);
     }
 }
+@keyframes blog-banner-left{
+  from {
+      transform: translateX(-6.25rem);
+    }
+    to {
+      transform: translateX(0rem);
+    }
+}
+@keyframes blog-banner-right{
+  from {
+      transform: translateX(6.25rem);
+    }
+    to {
+      transform: translateX(0rem);
+    }
+}
 @keyframes blog-text-right{
     from {
         transform: translateX(6.25rem);
