--- a/src/components/refer-and-earn/rne.css
+++ b/src/components/refer-and-earn/rne.css
@@ -63,3 +63,12 @@
     animation:expandcar 1 2s linear;
     transform: scale(1,1);
 }
+.expandcar.revealAgain{
+    opacity: 0;
+    transform: scale(0.01,0.01);
+}
+.expandcar.revealAgain.active{
+    opacity: 1;
+    animation:expandcar 1 2s linear;
+    transform: scale(1,1);
+}
