--- a/src/components/careers/animations.css
+++ b/src/components/careers/animations.css
@@ -14,6 +14,25 @@
     transform: translateY(0px);
   }
 }
+@keyframes slideTop{
+  from {
+    transform: translateY(-100vh);
+  }
+  to {
+    transform: translateY(0vh);
+  }
+}
+@keyframes slideTop2{
+  0% {
+    transform: translateY(-100vh);
+  }
+  75% {
+    transform: translateY(-100vh);
+  }
+  100% {
+    transform: translateY(0vh);
+  }
+}
 @keyframes slide-in-left{
   from {
       transform: translateX(-100px);
