--- a/src/components/mob/invest/invest.css
+++ b/src/components/mob/invest/invest.css
@@ -1,6 +1,6 @@
 .discoballmultistep.reveal{
     opacity: 0;
-    transform: translateY(-24rem);
+    transform: translateY(-32rem);
 }
 .discoballmultistep.reveal.active{
     opacity: 1;
@@ -11,17 +11,23 @@
     0%{
         transform: translateY(-32rem);
     } 
+    15%{
+        transform: translateY(-24rem);
+    }
     25%{
         transform: translateY(-24rem);
     }
     35%{
-        transform: translateY(-24rem);
+        transform: translateY(-19rem);
+    } 
+    45%{
+        transform: translateY(-19rem);
     } 
     50%{
-        transform: translateY(-16rem);
+        transform: translateY(-14rem);
     }
     60%{
-        transform: translateY(-16rem);
+        transform: translateY(-14rem);
     } 
     75%{
         transform: translateY(-8rem);
